[package]
name = "aitftp"
version = "0.1.0"
edition = "2021"
description = "Rust clone of atftp — Advanced TFTP client and server"
license = "MIT"

[workspace]
resolver = "3"

[lib]
name = "aitftp"
path = "src/lib.rs"

[[bin]]
name = "aitftp"
path = "src/bin/aitftp.rs"

[[bin]]
name = "aitftpd"
path = "src/bin/aitftpd.rs"

[dependencies]
tokio = { version = "1", features = [
  "rt-multi-thread",
  "macros",
  "net",
  "fs",
  "io-util",
  "time",
  "sync",
  "signal",
] }
bytes = "1"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1"
anyhow = "1"

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["full", "test-util"] }
